Fix alignment of mass message delete checkbox

--- a/chrome/askFixes/askFixes.css
+++ b/chrome/askFixes/askFixes.css
@@ -115,7 +115,7 @@ background-position:10px -62px;
 }
 
 #posts li.post input.MissingEmassDeleteSelect {
-vertical-align:top;
+vertical-align:-1px;
 margin-left:8px;
 opacity:0.5;
 }
