--- a/missinge.safariextension/askFixes/askFixes.css
+++ b/missinge.safariextension/askFixes/askFixes.css
@@ -132,7 +132,7 @@ background-position:6px -66px !important;
 }
 
 #posts li.post input.MissingEmassDeleteSelect {
-vertical-align:top;
+vertical-align:-1px;
 margin-left:8px;
 opacity:0.5;
 }
